tests/neg-macros/macros-in-same-project-2/Bar.scala
object Bar {

  inline def myMacro(): Unit = ${ Foo.aMacroImplementation }

  myMacro() // error

}
